--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
 
     width:100%;
     height:1000px;
-    background-color: lightslategray;
+    background-color:cornflowerblue;
     padding:0;
     margin:auto;
     color:white;
@@ -11,9 +11,11 @@ body{
 
 nav{
 
-    height:100px;
-    width:1200px;
+    height:65px;
+    width:100%;
     margin:0;
+    background-color:darkblue;
+    border-bottom: dashed 2px white;
 
 }
 
@@ -33,7 +35,7 @@ nav a{
 h1{
 
     position:relative;
-    top:-50px;
+    top:-30px;
     font:bold 70px arial;
     text-align:center;
 
